crates/icydb-core/tests/ui/db/commit_module_private.rs
use icydb_core::db::commit::CommitMarker;

fn main() {}
